--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.20.0",
+		"dotenv": "^16.0.0",
 		"ejs": "^3.1.6",
 		"express": "^4.17.3",
 		"express-handlebars": "^6.0.5",
+		"mongodb": "^4.5.0",
 		"mysql2": "^2.3.3",
 		"pug": "^3.0.2",
 		"sequelize": "^6.19.0"
