--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"ejs": "^3.1.6",
 		"express": "^4.17.3",
 		"express-handlebars": "^6.0.5",
+		"express-session": "^1.17.2",
 		"mongodb": "^4.5.0",
 		"mongoose": "^6.3.1",
 		"mysql2": "^2.3.3",
