--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"mongodb": "^4.5.0",
 		"mongoose": "^6.3.1",
 		"mysql2": "^2.3.3",
+		"nodemailer": "^6.7.3",
 		"pug": "^3.0.2",
 		"sequelize": "^6.19.0"
 	}
