--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"express-validator": "^6.14.0",
 		"mongodb": "^4.5.0",
 		"mongoose": "^6.3.1",
+		"multer": "^1.4.4",
 		"mysql2": "^2.3.3",
 		"nodemailer": "^6.7.3",
 		"pug": "^3.0.2",
