--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"multer": "^1.4.4",
 		"mysql2": "^2.3.3",
 		"nodemailer": "^6.7.3",
+		"pdfkit": "^0.13.0",
 		"pug": "^3.0.2",
 		"sequelize": "^6.19.0"
 	}
