--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"nodemailer": "^6.7.3",
 		"pdfkit": "^0.13.0",
 		"pug": "^3.0.2",
-		"sequelize": "^6.19.0"
+		"sequelize": "^6.19.0",
+		"stripe": "^8.219.0"
 	}
 }
