--- a/package.json
+++ b/package.json
@@ -4,34 +4,14 @@
 	"description": "",
 	"main": "app.js",
 	"scripts": {
-		"start": "nodemon app.js",
-		"start-server": "node app.js"
+		"start": "nodemon app.js"
 	},
 	"author": "Matthieu Clay",
 	"license": "ISC",
-	"devDependencies": {
-		"nodemon": "^2.0.15"
-	},
 	"dependencies": {
-		"bcryptjs": "^2.4.3",
-		"body-parser": "^1.20.0",
-		"connect-flash": "^0.1.1",
-		"connect-mongodb-session": "^3.1.1",
-		"csurf": "^1.11.0",
-		"dotenv": "^16.0.0",
-		"ejs": "^3.1.6",
-		"express": "^4.17.3",
-		"express-handlebars": "^6.0.5",
-		"express-session": "^1.17.2",
-		"express-validator": "^6.14.0",
-		"mongodb": "^4.5.0",
-		"mongoose": "^6.3.1",
-		"multer": "^1.4.4",
-		"mysql2": "^2.3.3",
-		"nodemailer": "^6.7.3",
-		"pdfkit": "^0.13.0",
-		"pug": "^3.0.2",
-		"sequelize": "^6.19.0",
-		"stripe": "^8.219.0"
+		"express": "^4.18.1"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.16"
 	}
 }
