--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"author": "Matthieu Clay",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.18.1"
+		"express": "^4.18.1",
+		"express-validator": "^6.14.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.16"
