--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 	"author": "Matthieu Clay",
 	"license": "ISC",
 	"dependencies": {
+		"dotenv": "^16.0.0",
 		"express": "^4.18.1",
-		"express-validator": "^6.14.0"
+		"express-validator": "^6.14.0",
+		"mongoose": "^6.3.2"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.16"
