--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.18.1",
 		"express-validator": "^6.14.0",
-		"mongoose": "^6.3.2"
+		"mongoose": "^6.3.2",
+		"multer": "^1.4.4"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.16"
