--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"author": "Matthieu Clay",
 	"license": "ISC",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.0.0",
 		"express": "^4.18.1",
 		"express-validator": "^6.14.0",
