--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"express-validator": "^6.14.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.3.2",
-		"multer": "^1.4.4"
+		"multer": "^1.4.4",
+		"socket.io": "^4.5.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.16"
