--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.0.0",
 		"express": "^4.18.1",
+		"express-graphql": "^0.12.0",
 		"express-validator": "^6.14.0",
+		"graphql": "^16.4.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.3.2",
 		"multer": "^1.4.4",
