--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"devDependencies": {
 		"chai": "^4.3.6",
 		"mocha": "^10.0.0",
-		"nodemon": "^2.0.16"
+		"nodemon": "^2.0.16",
+		"sinon": "^13.0.2"
 	}
 }
