--- a/package.json
+++ b/package.json
@@ -3,25 +3,14 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "app.js",
+	"type": "module",
 	"scripts": {
-		"test": "mocha --timeout 5000",
-		"start": "nodemon app.js"
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Matthieu Clay",
 	"license": "ISC",
 	"dependencies": {
-		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.0.0",
-		"express": "^4.18.1",
-		"express-validator": "^6.14.0",
-		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.3.2",
-		"multer": "^1.4.4"
-	},
-	"devDependencies": {
-		"chai": "^4.3.6",
-		"mocha": "^10.0.0",
-		"nodemon": "^2.0.16",
-		"sinon": "^13.0.2"
+		"express": "^4.18.1"
 	}
 }
