--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
 	"license": "ISC",
 	"dependencies": {
 		"express": "^4.18.1"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.13",
+		"@types/node": "^17.0.31"
 	}
 }
